# opnsense-auto-ip-ban

./: Cargo.toml  Dockerfile  README.md
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml
config/: log4rs.yml
src/: config.rs  ip_ban.rs  kafka.rs  loki_lookup.rs  main.rs  update_alias.rs
