[package]
name = "ip_ban"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ip_ban"
path = "src/main.rs"

[dependencies]
log = "0.4.17"
log4rs = "1.1.1"
rdkafka = "0.28.0"
regex = "1.5.6"
reqwest = "0.11.10"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.18.2", features = ["full"] }
